Fix $type expression behaviour for missing values in SBE

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Query Execution 2021-05-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug was discovered from query fuzzer failure: https://spruce.mongodb.com/task/mongodb_mongo_master_enterprise_rhel_80_64_bit_dynamic_sbe_query_fuzzer_sharded_2_enterprise_rhel_80_64_bit_dynamic_sbe_patch_81b5cc9f6e318134cc73e087d5c60618c49e4fad_60873564e3c3311d0d2fca10_21_04_26_21_52_51/tests?execution=0&sortBy=STATUS&sortDir=ASC

      Simplified repro:

      db.test.drop()
      db.test.insert({})
      const results = db.test.find({a: {$not: {$type: 4}}}).toArray();
      print(tojson(results));
      

      Classic engine outputs single document in the collection, while SBE does not return any results.

            Assignee:
            Nikita Lapkov (Inactive)
            Reporter:
            Nikita Lapkov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: