SERVER-56426 Fix $type expression behaviour for missing values in SBE